--- a/thanks.html
+++ b/thanks.html
@@ -92,8 +92,8 @@
 		<a href="./index.html" class="btn">Back to Homepage</a>
 		<script>
 			// Apply saved theme
-			const savedTheme = localStorage.getItem('theme') || 'dark';
-			document.documentElement.setAttribute('data-theme', savedTheme);
+			const savedTheme = localStorage.getItem("theme") || "dark";
+			document.documentElement.setAttribute("data-theme", savedTheme);
 		</script>
 	</body>
 </html>
