--- a/index.html
+++ b/index.html
@@ -1095,25 +1095,26 @@
 			});
 
 			// Theme toggle functionality
-			const themeToggle = document.getElementById('theme-toggle');
-			const themeIcon = themeToggle.querySelector('i');
-			
+			const themeToggle = document.getElementById("theme-toggle");
+			const themeIcon = themeToggle.querySelector("i");
+
 			// Check for saved theme preference
-			const savedTheme = localStorage.getItem('theme') || 'dark';
-			document.documentElement.setAttribute('data-theme', savedTheme);
+			const savedTheme = localStorage.getItem("theme") || "dark";
+			document.documentElement.setAttribute("data-theme", savedTheme);
 			updateThemeIcon(savedTheme);
-			
-			themeToggle.addEventListener('click', () => {
-				const currentTheme = document.documentElement.getAttribute('data-theme');
-				const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-				
-				document.documentElement.setAttribute('data-theme', newTheme);
-				localStorage.setItem('theme', newTheme);
+
+			themeToggle.addEventListener("click", () => {
+				const currentTheme =
+					document.documentElement.getAttribute("data-theme");
+				const newTheme = currentTheme === "dark" ? "light" : "dark";
+
+				document.documentElement.setAttribute("data-theme", newTheme);
+				localStorage.setItem("theme", newTheme);
 				updateThemeIcon(newTheme);
 			});
-			
+
 			function updateThemeIcon(theme) {
-				themeIcon.className = theme === 'dark' ? 'fas fa-sun' : 'fas fa-moon';
+				themeIcon.className = theme === "dark" ? "fas fa-sun" : "fas fa-moon";
 			}
 		</script>
 	</body>
