--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				/* Dark theme (default) */
 				--primary: #64ffda;
 				--secondary: #0a192f;
+				--secondary-rgb: 10, 25, 47;
 				--dark: #112240;
 				--light: #ccd6f6;
 				--gray: #8892b0;
@@ -23,6 +24,7 @@
 			:root[data-theme="light"] {
 				--primary: #00b887;
 				--secondary: #ffffff;
+				--secondary-rgb: 255, 255, 255;
 				--dark: #f0f5ff;
 				--light: #2a2f4c;
 				--gray: #4a5568;
@@ -73,13 +75,20 @@
 			}
 
 			header {
-				background-color: var(--secondary);
-				padding: 30px 0;
+				background-color: rgba(var(--secondary-rgb), 0.8);
+				backdrop-filter: blur(10px);
+				-webkit-backdrop-filter: blur(10px);
+				padding: 20px 0;
 				position: fixed;
 				width: 100%;
 				top: 0;
 				z-index: 1000;
-				box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.7);
+				transition: all 0.3s ease;
+			}
+
+			header.scrolled {
+				padding: 15px 0;
+				box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 			}
 
 			.header-content {
@@ -629,6 +638,7 @@
 							<li><a href="#education">Education</a></li>
 							<li><a href="#experience">Experience</a></li>
 							<li><a href="#projects">Projects</a></li>
+							<li><a href="#skills">Skills</a></li>
 							<li><a href="#contact">Contact</a></li>
 							<li>
 								<button class="theme-toggle" id="theme-toggle">
@@ -1116,6 +1126,16 @@
 			function updateThemeIcon(theme) {
 				themeIcon.className = theme === "dark" ? "fas fa-sun" : "fas fa-moon";
 			}
+
+			// Add scroll handler for header
+			window.addEventListener("scroll", () => {
+				const header = document.querySelector("header");
+				if (window.scrollY > 50) {
+					header.classList.add("scrolled");
+				} else {
+					header.classList.remove("scrolled");
+				}
+			});
 		</script>
 	</body>
 </html>
