change profile image

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 					</div>
 					<div class="profile-image-container">
 						<img
-							src="images/profile.png"
+							src="images/profile.jpg"
 							alt="Anmol Sharma"
 							class="profile-image"
 						/>
