Update the content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 						<!-- new contact info -->
 						<div class="contact-details">
-							<div><i class="fas fa-map-marker-alt"></i> San Ramon, CA</div>
+							<div><i class="fas fa-map-marker-alt"></i> Santa Clara, CA</div>
 							<div>
 								<i class="fas fa-envelope"></i>
 								<a href="mailto:anmol2512s@gmail.com">anmol2512s@gmail.com</a>
@@ -112,17 +112,17 @@
 									Science and Engineering</span
 								>
 							</div>
-							<span class="item-date">Expected Dec 2026</span>
+							<span class="item-date">Mar 2025 – Dec 2026</span>
 						</div>
 						<div class="item-location">
 							<i class="fas fa-map-marker-alt"></i> Santa Clara, CA
 						</div>
 						<ul>
-							<li>GPA: 3.7/4.0</li>
 							<li>
-								Relevant Coursework: Machine Learning, Advanced Algorithms,
-								Advanced Operating Systems, Object-Oriented Analysis, Design,
-								and Programming
+								Relevant Coursework: Machine Learning, Deep Learning, Advanced
+								Algorithms, Advanced Operating Systems, Object-Oriented
+								Analysis, Design & Programming, Secure Coding in C and C++,
+								Distributed Systems
 							</li>
 						</ul>
 					</div>
@@ -131,32 +131,32 @@
 						<span class="timeline-date">2022</span>
 						<img
 							src="images/ggsipu-logo.png"
-							alt="GGSIPU"
+							alt="Guru Gobind Singh Indraprastha University"
 							class="university-logo"
 						/>
 						<div class="item-header">
 							<div>
 								<span class="item-title"
-									><i class="fas fa-university"></i> GGSIPU</span
+									><i class="fas fa-university"></i> Guru Gobind Singh
+									Indraprastha University</span
 								>
 								<span class="item-subtitle"
 									><i class="fas fa-award"></i> Bachelor of Technology in
 									Computer Science and Engineering</span
 								>
 							</div>
-							<span class="item-date">2018 – 2022</span>
+							<span class="item-date">Aug 2018 – Jul 2022</span>
 						</div>
 						<div class="item-location">
 							<i class="fas fa-map-marker-alt"></i> Delhi, India
 						</div>
 						<ul>
-							<li>GPA: 3.85/4.00 (90%)</li>
-							<li>Student Coordinator ‑ BPIT ICFOSS (2021-2022)</li>
 							<li>
-								Vice President ‑ BPIT International Org. of Software Developers
-								(2020-2021)
+								Relevant Coursework: Algorithms Design and Analysis, Data
+								Structure, Object Oriented Programming, Database Management
+								Systems, Computer Networks, Software Engineering, Machine
+								Learning, Web Technology
 							</li>
-							<li>First Place Winner ‑ College Smart India Hackathon 2020</li>
 						</ul>
 					</div>
 				</div>
@@ -174,32 +174,28 @@
 				<div class="experience-item">
 					<div class="item-header">
 						<div>
-							<span class="item-title">Josh Technology Group</span>
-							<span class="item-subtitle">Software Development Engineer</span>
+							<span class="item-title">Miller Center for Global Impact</span>
+							<span class="item-subtitle"
+								>Software Developer Intern (Full Stack & GenAI)</span
+							>
 						</div>
-						<span class="item-date">Jul 2022 - Nov 2024</span>
+						<span class="item-date">Sep 2025 – Present</span>
 					</div>
 					<div class="item-location">
-						<i class="fas fa-map-marker-alt"></i> Gurugram, India
+						<i class="fas fa-map-marker-alt"></i> Santa Clara, CA
 					</div>
 					<ul>
 						<li>
-							Enhanced notification system by integrating WhatsApp, MS Teams,
-							and Slack support, resulting in 42% increase in user engagement
+							Designing and building an AI-powered document evaluation
+							application and its underlying AI SDK from scratch, using the
+							LangChain framework to integrate multiple Large Language Models
+							(LLMs)
 						</li>
 						<li>
-							Spearheaded development of a scalable online class management
-							system (Django, PostgreSQL), automating workflows and enabling
-							analytics, reducing manual overhead by 60%
-						</li>
-						<li>
-							Collaborated with cross-functional teams to migrate Django
-							template-based application to Django REST API with React frontend,
-							improving performance and maintainability
-						</li>
-						<li>
-							Designed and developed a complete CRM microservice system using
-							FastAPI, enabling colleges to effectively track recruitment leads
+							Implementing a scalable Natural Language Processing (NLP) and
+							LLM-based feedback system to provide personalized, actionable
+							insights, while collaborating with researchers to enhance accuracy
+							and usability
 						</li>
 					</ul>
 				</div>
@@ -208,26 +204,72 @@
 					<div class="item-header">
 						<div>
 							<span class="item-title">Josh Technology Group</span>
-							<span class="item-subtitle">Software Dev Engineering Intern</span>
+							<span class="item-subtitle">Software Developer (Full Stack)</span>
 						</div>
-						<span class="item-date">Aug 2021 - Jul 2022</span>
+						<span class="item-date">Aug 2022 – Nov 2024</span>
 					</div>
 					<div class="item-location">
 						<i class="fas fa-map-marker-alt"></i> Gurugram, India
 					</div>
 					<ul>
 						<li>
-							Optimized PDF generation Cloud Function using parallel processing
-							in Python, reducing response time by 50%
+							Collaborated with a team to architect and build a comprehensive
+							Class Management system using Django and React, and spearheaded
+							the migration of a legacy platform to a modern Django REST API
+							backend and React frontend
 						</li>
 						<li>
-							Engineered a serverless document migration system (Cloud Run,
-							Pub/Sub) that transferred over 10M documents from Firestore to
-							BigQuery, ensuring data integrity and 2× throughput
+							Designed and developed a high-performance CRM microservice from
+							scratch using FastAPI and Elasticsearch for sub-second search, and
+							performed full-stack maintenance across an AngularJS and Django
+							codebase
 						</li>
 						<li>
-							Enhanced security by implementing Multi-Factor Authentication
-							(MFA) and building a robust authentication system
+							Engineered a diverse range of full-stack features, including a
+							dynamic form system with React Hook Form, a custom data query
+							tool, user performance badges, and foundational APIs for an admin
+							dashboard
+						</li>
+						<li>
+							Revamped the notification system by integrating WhatsApp, MS
+							Teams, and Slack, which boosted user engagement by 42%
+						</li>
+						<li>
+							Enhanced security and infrastructure by upgrading Rapid7 agents,
+							setting up new client onboarding subdomains, and maintaining a
+							specialized data system in .NET 3.5
+						</li>
+					</ul>
+				</div>
+
+				<div class="experience-item">
+					<div class="item-header">
+						<div>
+							<span class="item-title">Josh Technology Group</span>
+							<span class="item-subtitle"
+								>Software Developer Intern (Full Stack)</span
+							>
+						</div>
+						<span class="item-date">Aug 2021 – Jul 2022</span>
+					</div>
+					<div class="item-location">
+						<i class="fas fa-map-marker-alt"></i> Gurugram, India
+					</div>
+					<ul>
+						<li>
+							Built a complete backend service from the ground up, implementing
+							a Django REST API, GraphQL, a full MFA system, and live chat with
+							GetStream APIs on a PostgreSQL database
+						</li>
+						<li>
+							Engineered a serverless data migration pipeline on GCP using
+							Pub/Sub to transfer approximately 10 million documents from
+							Firestore to BigQuery
+						</li>
+						<li>
+							Improved a PDF generation microservice by implementing parallel
+							processing, halving its response time, and contributed to various
+							full-stack tasks using React and Flask
 						</li>
 					</ul>
 				</div>
@@ -277,19 +319,20 @@
 								></a>
 							</div>
 						</div>
-						<h3 class="project-title">Q-Stream Player</h3>
+						<h3 class="project-title">Q-Stream: Cross-Platform Media Player</h3>
 						<div class="project-description">
-							Developed an open-source, cross-platform media player application
-							using Python's PyQt5 framework, enabling users to stream and
-							manage media content. Integrated a lightweight Flask API for
-							remote playback control, enhancing user accessibility and
-							convenience.
+							Founded and led the development of Q-Stream, an open-source media
+							player. Architected the full-stack application, utilizing Python,
+							PyQt5 for the GUI, Streamlink for video ingestion, and Flask for
+							backend modularity. Grew the project into a collaborative
+							open-source initiative featured in Devscript Winter of Code
+							(DWoC).
 						</div>
 						<div class="project-tech">
 							<span class="tech-item">Python</span>
 							<span class="tech-item">PyQt5</span>
 							<span class="tech-item">Flask</span>
-							<span class="tech-item">FFmpeg</span>
+							<span class="tech-item">Streamlink</span>
 						</div>
 					</div>
 
@@ -365,15 +408,13 @@
 								</a>
 							</div>
 						</div>
-						<h3 class="project-title">
-							GetBestCandidate: Candidate Recommendation Engine
-						</h3>
+						<h3 class="project-title">Candidate Recommendation Engine</h3>
 						<div class="project-description">
-							Built a Streamlit web app that recommends top candidates for a
-							role by comparing a job description with uploaded resumes using
-							text embeddings and cosine similarity. Displays top 5–10
-							candidates with similarity scores and an optional AI summary for
-							fit.
+							Developed an NLP-powered application using Streamlit that
+							automates resume screening. The engine leverages semantic search
+							with Sentence-Transformers and cosine similarity to rank resumes,
+							and includes a generative AI component using a Hugging Face T5
+							model to summarize each candidate's fit.
 							<br />
 							<a
 								href="https://getbestcandidate-kbnfu2rik8kuznb4wyxws7.streamlit.app/"
@@ -392,8 +433,8 @@
 						<div class="project-tech">
 							<span class="tech-item">Python</span>
 							<span class="tech-item">Streamlit</span>
-							<span class="tech-item">Embeddings</span>
-							<span class="tech-item">Cosine Similarity</span>
+							<span class="tech-item">Sentence-Transformers</span>
+							<span class="tech-item">Hugging Face</span>
 							<span class="tech-item">NLP</span>
 						</div>
 					</div>
@@ -410,47 +451,53 @@
 				</div>
 				<div class="skills-container">
 					<div class="skill-category">
-						<h3><i class="fas fa-code"></i> Languages</h3>
+						<h3><i class="fas fa-code"></i> Programming</h3>
 						<ul class="skill-list">
 							<li><i class="fab fa-python"></i> Python</li>
-							<li><i class="fas fa-plus-square"></i> C++</li>
 							<li><i class="fab fa-java"></i> Java</li>
+							<li><i class="fas fa-plus-square"></i> C++</li>
+							<li><i class="fas fa-database"></i> SQL</li>
+							<li><i class="fas fa-project-diagram"></i> GraphQL</li>
 							<li><i class="fab fa-js"></i> TypeScript</li>
+							<li><i class="fab fa-js-square"></i> JavaScript</li>
 							<li><i class="fas fa-mobile-alt"></i> Dart</li>
 						</ul>
 					</div>
 
 					<div class="skill-category">
-						<h3><i class="fas fa-laptop-code"></i> Frameworks</h3>
+						<h3><i class="fas fa-laptop-code"></i> Frameworks & Libraries</h3>
 						<ul class="skill-list">
+							<li><i class="fab fa-react"></i> React</li>
+							<li><i class="fab fa-angular"></i> AngularJS</li>
 							<li><i class="fab fa-python"></i> Django</li>
 							<li><i class="fab fa-python"></i> Flask</li>
 							<li><i class="fas fa-bolt"></i> FastAPI</li>
-							<li><i class="fab fa-react"></i> React</li>
-							<li><i class="fab fa-react"></i> Next.js</li>
+							<li><i class="fas fa-mobile-alt"></i> Flutter</li>
+							<li><i class="fas fa-chart-line"></i> Streamlit</li>
+							<li><i class="fas fa-desktop"></i> PyQt5</li>
 						</ul>
 					</div>
 
 					<div class="skill-category">
-						<h3><i class="fas fa-brain"></i> ML / Data</h3>
+						<h3><i class="fas fa-brain"></i> ML & Data</h3>
 						<ul class="skill-list">
 							<li><i class="fab fa-python"></i> TensorFlow</li>
 							<li><i class="fas fa-microchip"></i> PyTorch</li>
-							<li><i class="fas fa-eye"></i> OpenCV</li>
+							<li><i class="fas fa-face-smile"></i> Hugging Face</li>
+							<li><i class="fas fa-cogs"></i> Scikit-learn</li>
 							<li><i class="fas fa-table"></i> Pandas</li>
 							<li><i class="fas fa-calculator"></i> NumPy</li>
 						</ul>
 					</div>
 
 					<div class="skill-category">
-						<h3><i class="fas fa-cloud"></i> DevOps & Cloud</h3>
+						<h3><i class="fas fa-cloud"></i> Cloud & DevOps</h3>
 						<ul class="skill-list">
 							<li><i class="fab fa-aws"></i> AWS</li>
-							<li><i class="fab fa-google"></i> Google Cloud</li>
+							<li><i class="fab fa-google"></i> GCP</li>
 							<li><i class="fab fa-docker"></i> Docker</li>
+							<li><i class="fas fa-fire"></i> Firebase</li>
 							<li><i class="fas fa-dharmachakra"></i> Kubernetes</li>
-							<li><i class="fas fa-infinity"></i> CI/CD</li>
-							<li><i class="fas fa-cubes"></i> Terraform</li>
 						</ul>
 					</div>
 
@@ -458,10 +505,21 @@
 						<h3><i class="fas fa-database"></i> Databases</h3>
 						<ul class="skill-list">
 							<li><i class="fas fa-database"></i> PostgreSQL</li>
-							<li><i class="fas fa-leaf"></i> MongoDB</li>
+							<li><i class="fas fa-database"></i> MySQL</li>
+							<li><i class="fas fa-search"></i> Elasticsearch</li>
 							<li><i class="fas fa-cube"></i> Redis</li>
-							<li><i class="fas fa-fire"></i> Firebase</li>
-							<li><i class="fab fa-google"></i> BigQuery</li>
+							<li><i class="fas fa-fire"></i> Firestore</li>
+						</ul>
+					</div>
+
+					<div class="skill-category">
+						<h3><i class="fas fa-tools"></i> Tools & Methodologies</h3>
+						<ul class="skill-list">
+							<li><i class="fas fa-tasks"></i> Agile</li>
+							<li><i class="fab fa-jira"></i> Jira</li>
+							<li><i class="fab fa-confluence"></i> Confluence</li>
+							<li><i class="fab fa-git-alt"></i> Git</li>
+							<li><i class="fab fa-linux"></i> Linux/Unix</li>
 						</ul>
 					</div>
 				</div>
