--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Anmol Sharma | Developer Portfolio</title>
+		<title>Anmol Sharma | Full Stack & AI Developer</title>
+		<meta
+			name="description"
+			content="Full Stack Developer with AI/ML expertise. Building intelligent web applications and scalable AI-powered solutions."
+		/>
 		<link rel="icon" type="image/ico" href="images/favicon.ico" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Inter:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="styles/theme.css" />
